--- a/JobTeens_MVC/pom.xml
+++ b/JobTeens_MVC/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.jobteens</groupId>
 	<artifactId>JobTeens</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1</version>
 	<name>JobTeens</name>
 	<description>Projeto social Recode Pro 2023</description>
 	<properties>
@@ -45,11 +45,19 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<!--<dependency>-->
+			<!--<groupId>com.mysql</groupId>-->
+			<!--<artifactId>mysql-connector-j</artifactId>-->
+			<!--<scope>runtime</scope>-->
+		<!--</dependency>-->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
