--- a/JobTeens_MVC/src/main/resources/application.properties
+++ b/JobTeens_MVC/src/main/resources/application.properties
@@ -1,14 +1,7 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/jobteens?createDatabaseIfNotExist=true&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://localhost:3306/jobteens?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
  
-#spring.jpa.show-sql=true
-#spring.jpa.open-in-view=false
-
-# ---------- postgreSQL ----------
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=postgres://admin:U6UumoFOss9oqjy9J5NHQO8yCMYpKwrO@dpg-cmjdkdol5elc73dr1ec0-a/jobteensdb
-spring.datasource.username=admin
-spring.datasource.password=U6UumoFOss9oqjy9J5NHQO8yCMYpKwrO
-
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
